@@ -8,6 +8,7 @@ someone sends patches!).
 
 BUGS
 
+Copy box - should supply text/uri-list?
 Rename box - use action window (currently doesn't work across file systems)
 
 GNOME toolbar
