@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+18-Jul-2000
+~~~~~~~~~~~
+Prevent dragging from a pinboard selection to itself, or onto the desktop
+background.
+
 17-Jul-2000
 ~~~~~~~~~~~
 Clicking on the root window works (button-1 clears the selection,
